<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        />
    <item
        android:id="@+id/deliveries_menu"
        android:title="@string/delivery"
        android:icon="@drawable/ic_baseline_list_alt_24"
        />
    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item
        android:id="@+id/favorites_menu"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        />
    <item
        android:id="@+id/profile_menu"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        />

</menu>