<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                android:layout_centerHorizontal="true"
                android:background="#fff"
                android:id="@+id/carouselView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/carouselView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/categoryLL"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:padding="7dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:scrollbars="horizontal"
                    android:background="#fff"
                    android:id="@+id/chipsView"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/categoryLL"
                android:layout_centerHorizontal="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/restaurants_near_you"
                        android:textColor="@color/black"
                        android:id="@+id/restaurantTV"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:padding="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_more"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="7dp"
                        android:background="@drawable/view_more_hover"
                        />

                </RelativeLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurantsView"
                    />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</FrameLayout>