<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/profile_list_item_bg"
            android:clickable="true"
            android:focusable="true">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_person_add_alt_1_24"
                android:layout_margin="7dp"
                android:contentDescription="@string/invite_friends"
                android:background="@android:color/transparent"
                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_friends"
                    android:textSize="16sp"
                    android:padding="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_margin="7dp"
                    android:contentDescription="@string/view"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/profile_list_item_bg"
            android:clickable="true"
            android:focusable="true"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_message_24"
                android:layout_margin="7dp"
                android:contentDescription="@string/ask_a_question"
                android:background="@android:color/transparent"
                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_a_question"
                    android:textSize="16sp"
                    android:padding="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_margin="7dp"
                    android:contentDescription="@string/view"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/profile_list_item_bg"
            android:clickable="true"
            android:focusable="true"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_help_outline_24"
                android:layout_margin="7dp"
                android:contentDescription="@string/help_center"
                android:background="@android:color/transparent"
                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/help_center"
                    android:textSize="16sp"
                    android:padding="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_margin="7dp"
                    android:contentDescription="@string/view"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="7dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/profile_list_item_bg"
            android:clickable="true"
            android:focusable="true"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_info_24"
                android:layout_margin="7dp"
                android:contentDescription="@string/about_us"
                android:background="@android:color/transparent"
                />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:textSize="16sp"
                    android:padding="7dp"
                    android:layout_marginStart="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:layout_margin="7dp"
                    android:contentDescription="@string/view"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>