<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SearchFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="@string/hello_dennis"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/lets_hook_you_up_with_a_good_dish"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="7dp"
                        />
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/profile_logo"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />
            </LinearLayout>


            <EditText
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:id="@+id/search_bar"
                android:hint="@string/search"
                android:inputType="text"
                android:layout_gravity="center|top"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:background="@drawable/search_bar"
                android:drawablePadding="7dp"
                android:autofillHints="no" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filter_search_chips"
                />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                >


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/filterLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:chipSpacing="8dp"
                    app:singleSelection="true" />
            </HorizontalScrollView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>